--- a/carpedata.bib
+++ b/carpedata.bib
@@ -7,6 +7,17 @@
     pages = {872--878}
 }
 
+@article{bhattacharya2007collective,
+  title={Collective entity resolution in relational data},
+  author={Bhattacharya, I. and Getoor, L.},
+  journal={ACM Transactions on Knowledge Discovery from Data (TKDD)},
+  volume={1},
+  number={1},
+  pages={5},
+  year={2007},
+  publisher={ACM}
+}
+
 @misc{haystack,
     abstract = {{The Resource Definition Framework (RDF) is designed to support
 agent communication on the Web, but it is also suitable as a
