--- a/chi2012.tex
+++ b/chi2012.tex
@@ -225,20 +225,25 @@ Heterogeneity was measured through \emph{pairwise consistency metrics} we derive
 % TODO TODO TODO TODO 
 Our findings suggest that 
 
-\section{Supporting Design of the DataPalette}
-
-\subsection{Design Goals}
+\section{Designng DataPalette : An Interface for Serendipitous Data Mixing}
 
 At a high level, the overall goal of DataPalette was to empower end-users to mix arbitrary structured data feeds on-the-fly while solving their particular information task(s) - be them sensemaking or decision-making related - in order to more effectively accomplish these tasks.  Unlike Mashup makers, including Yahoo Pipes!, the goal was to facilitate such integration without a need for an explicit separate mapping or integration step, which would detract from the overall usability or usefulness of the system by making people do something that did not immediately contribute to their resolving their need.
 
-Towards our design goal, the two prestudies provided valuable insight that allowed us to constrain the design search space. The first prestudy confirmed the need for data integration by showing that people did, in fact, prefer to rely upon multiple sources of information for making important decisions, and identified the kinds of sources people most commonly used.  The second prestudy revealed that the most common inconisistencies that occurred in the APIs and data feeds available through from such data sources consisted predominantly of the simpler kinds of heterogeneity - terminological and simpler forms of structural heterogeneity, rather than the delicate semantic/modeling variety, which were comparatively rare. This gave us optimism that an interactional approach optimised around the these simpler kinds of heterogeneity would be effective.
+The two prestudies provided valuable insight towards this goal that allowed us to guide our design process. The first prestudy confirmed the need for data integration by showing that people did, in fact, prefer to rely upon multiple sources of information for making important decisions, and identified the kinds of sources people most commonly used.  The second prestudy revealed that the most common inconisistencies that occurred in the APIs and data feeds available through from such data sources consisted predominantly of the simpler kinds of heterogeneity - terminological and simpler forms of structural heterogeneity, rather than the delicate semantic/modeling variety, which were comparatively rare. This gave us optimism that an interactional approach optimised around the these simpler kinds of heterogeneity would be effective.
 
 In the following sections we describe the design process we used to create prototype DataPalette, followed by a detailed description of the design of the prototype and justification.
 
 \subsection{Process}
 
-We followed a spiral model consisting of the phases of plan, design, mock-up, prototype, test, re-plan, and re-design to derive the design of DataPalette.  This process was used because of the high degree of initial uncertainty associated with how to design easy to use
+We followed a five-phase spiral model consisting of planning, designing, mocking-up, prototyping, and testing to derive the design of DataPalette.  This process was used because of the high degree of initial uncertainty associated with how to design the mechanisms for facilitating the various aspects of effective data mixing we describe in the next section. We coped with this uncertainty through alternative generation and elimination; multiple alternatives were designed, drawn up and evaluated by expert colleagues (and in later iterations, non-expert potential users), who provided critiques of the alternatives. The ease with which designs could be prototyped in HTML5 with modern web frameworks allowed us to perform this develop-test-iterate rapidly through seven iterations of this process.
 
+\subsection{Interaction mechanisms for data mixing}
+
+In order to familiar to new users, we borrowed the overall interaction and feel from MacOS Finder-style file managers,  with support for separate windows which can be freely moved, resized and titled. (As described in Results, we discovered that windows caused considerable clutter and frustration for some users in later stages of their tasks, a fact we did not detect during prototype testing.)
+
+As we refined our designs, we arrived at four simple mechanisms to support data mixing.  These were combined with a number of simple interaction mechanisms that were borrowed from other systems
+
+The ultimatel design of datapal
 
 Interaction features 
 	multiple paths selection
