--- a/chi2012.tex
+++ b/chi2012.tex
@@ -121,7 +121,6 @@ Based upon the data integration needs revealed by people in the interviews, and 
 
 In this section, we touch on motivating work for DataPalette from three fields: peronal information management, data integration, and end-user mashups and toolkits.
 
-
 The primary motivation for this work stems from field studies in personal information management, where letting users effectively consolidate and work with data from multiple sources has remained a challenge for over a decade. The problem of data fragmentation (\cite{Jones05towardsa}, for example, derives from an inability to effectively consolidate data across multiple applications, services and platforms (e.g., \cite{bergman}, \cite{boardmansasse}). In our own previously-conducted field study, (reference anonymised) we observed variations of manual ``coping strategies'' (or, if programmers, elaborate, custom-coded one-off solutions) to allow people to manage heterogeneous data from disparate sources -- be them online, offline, or other people.  Similar findings from other studies include Voida et al.'s observations of volunteer coordinators' ``homebrew databases'', manually-mainted information assemblages concocted to handle the widely varied and heterogeneous data collection requirements such groups needed to coordinate their activities \cite{Voida:2011:HDC:1978942.1979078}.
 %% TODO MORE HERE
 
@@ -225,7 +224,14 @@ Heterogeneity was measured through \emph{pairwise consistency metrics} we derive
 % TODO TODO TODO TODO 
 Our findings suggest that 
 
-\section{Designng DataPalette : An Interface for Serendipitous Data Mixing}
+\section{Designing DataPalette : An Interface for Serendipitous Data Mixing}
+\begin{figure*}[htbp]
+\begin{center}
+\includegraphics[width=18cm]{img/screenshot}
+\caption{WebBox uses a Drag and Drop interface to add data into the workspace.}
+\label{fig:dragdrop}
+\end{center}
+\end{figure*}
 
 At a high level, the overall goal of DataPalette was to empower end-users to mix arbitrary structured data feeds on-the-fly while solving their particular information task(s) - be them sensemaking or decision-making related - in order to more effectively accomplish these tasks.  Unlike Mashup makers, including Yahoo Pipes!, the goal was to facilitate such integration without a need for an explicit separate mapping or integration step, which would detract from the overall usability or usefulness of the system by making people do something that did not immediately contribute to their resolving their need.
 
@@ -234,12 +240,11 @@ The two prestudies provided valuable insight towards this goal that allowed us t
 In the following sections we describe the design process we used to create prototype DataPalette, followed by a detailed description of the design of the prototype and justification.
 
 \subsection{Process}
-
-We followed a five-phase spiral model consisting of planning, designing, mocking-up, prototyping, and testing to derive the design of DataPalette.  This process was used because of the high degree of initial uncertainty associated with how to design the mechanisms for facilitating the various aspects of effective data mixing we describe in the next section. We coped with this uncertainty through alternative generation and elimination; multiple alternatives were designed, drawn up and evaluated by expert colleagues (and in later iterations, non-expert potential users), who provided critiques of the alternatives. The ease with which designs could be prototyped in HTML5 with modern web frameworks allowed us to perform this develop-test-iterate rapidly through seven iterations of this process.
+We followed a five-phase spiral model consisting of planning, designing, mocking-up, prototyping, and testing to derive the design of DataPalette.  This process was used because of the high degree of initial uncertainty associated with the mechanisms for facilitating the various aspects of effective data mixing that we describe in the next section. We approached this design challenge through alternative generation and elimination; alternatives were designed, drawn up and evaluated by expert colleagues (and in later iterations, non-expert potential users), who provided critiques of the alternatives. The ease with which designs could be prototyped in HTML5 with modern web frameworks allowed us to perform this develop-test-iterate rapidly through seven iterations of this process.
 
 \subsection{Interaction mechanisms for data mixing}
+In order to familiar to new users, we borrowed the overall interaction and feel from MacOS Finder-style file managers, with support for separate windows which can be freely moved, resized and titled. (As described in Results, we discovered that windows caused considerable clutter and frustration in later stages of some tasks, a fact we did not detect during prototype testing.)  Instead of files, however, the element of manipulation was a single, discrete structured data item, or \emph{instance}.  (In order to do this, non-RDF data had to be first ``chunked'' into instances, which was usually a well-defined process).  Data sources were represented as collapsable panels in a sidebar on the left of the workspace, from which instances or entire data sources could be ``pulled off'' onto the workspace.  Figure \
 
-In order to familiar to new users, we borrowed the overall interaction and feel from MacOS Finder-style file managers,  with support for separate windows which can be freely moved, resized and titled. (As described in Results, we discovered that windows caused considerable clutter and frustration for some users in later stages of their tasks, a fact we did not detect during prototype testing.)
 
 As we refined our designs, we arrived at four simple mechanisms to support data mixing.  These were combined with a number of simple interaction mechanisms that were borrowed from other systems
 
@@ -251,14 +256,6 @@ Interaction features
 	visualisation of partial results
 
 Design process
-
-\begin{figure*}[htbp]
-\begin{center}
-\includegraphics[width=18cm]{img/dragdrop}
-\caption{WebBox uses a Drag and Drop interface to add data into the workspace.}
-\label{fig:dragdrop}
-\end{center}
-\end{figure*}
 
 \begin{figure}[htbp]
 \begin{center}
