some edits to intro

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -115,7 +115,7 @@ We hypothesise that end-users would benefit from this rich data with tools allow
 
 Second, we conducted a quantitative, structural analysis of various popular personal data sources available today to identify potential barriers to effective unification of data from each.  Drawing upon definitions from the database integration and automatic schema matching literature, we characterised the types of heterogeneity exhibited across data sources in three popular domains: social networking, shopping, and dining, finding that terminological heterogeneity dominates the simpler data feeds (including social networking and restaurant recommendations), while structural issues pervade the more complex schemas of online retailers' product catalogues.
 
-Third, we developed DataPalette, which focuses on the most common types of heterogeneity to enable serendipitous ``data mixing'' - a form of simple integration sufficient to allow people to easily and effectively combine and compare information sources without the need to write code.  It was principally designed based upon people's data integration needs and to support data heterogeneity observed in the previous studies.  We embarked on a user-centric design exercise towards an interface to facilitate simple, ``light-touch'' integration tasks of diverse, heterogeneous data sources.  We then performed a usability evaluation of DataPalette, which revealed that most users were comfortable with and that this interface is effectively expedites the most sophisticated of the typical kinds of ``data integration'' tasks people need to perform while planning personal.
+Third, we developed DataPalette, which focuses on the most common types of heterogeneity to enable serendipitous ``data mixing'' - a form of simple integration sufficient to allow people to easily and effectively combine and compare information sources without the need to write code.  It was principally designed based upon people's data integration needs and to support data heterogeneity observed in the previous studies.  We embarked on a user-centric design exercise towards an interface to facilitate simple, ``light-touch'' integration tasks of diverse, heterogeneous data sources.  We then performed a usability evaluation of DataPalette, which revealed that most users were comfortable with the interactive integration mechanisms we devised, and that this interface effectively improved people's ability to perform multifaceted decision making tasks using multiple sources.
 
 \section{Background}
 
