some edits to intro

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -242,11 +242,17 @@ In the following sections we describe the design process we used to create proto
 \subsection{Process}
 We followed a five-phase spiral model consisting of planning, designing, mocking-up, prototyping, and testing to derive the design of DataPalette.  This process was used because of the high degree of initial uncertainty associated with the mechanisms for facilitating the various aspects of effective data mixing that we describe in the next section. We approached this design challenge through alternative generation and elimination; alternatives were designed, drawn up and evaluated by expert colleagues (and in later iterations, non-expert potential users), who provided critiques of the alternatives. The ease with which designs could be prototyped in HTML5 with modern web frameworks allowed us to perform this develop-test-iterate rapidly through seven iterations of this process.
 
-\subsection{Interaction mechanisms for data mixing}
-In order to familiar to new users, we borrowed the overall interaction and feel from MacOS Finder-style file managers, with support for separate windows which can be freely moved, resized and titled. (As described in results, we discovered that windows caused considerable clutter at the later stages of some tasks, a fact we did not detect until the main study.)  Instead of files, however, the element of manipulation was a single, discrete structured data item, or \emph{instance}.  In order to define \emph{instances} for non-RDF data, such as JSON or XML, we defined all subtrees with more than 1 child as its an instance.  Data sources were represented as collapsable panels in a sidebar on the left of the workspace, from which instances or entire data sources could be ``pulled off'' onto the workspace.  Figure \ref{fig:workspace} displays the entire UI overview.
+\subsection{Interaction with DataPalette}
+In order to feel familiar to new users and focus our design efforts on integration-related aspects of the interface, we borrowed metaphors and interactions directly from MacOS Finder-style file managers.  Specifically, in the DataPalette workspace, shown in Figure \ref{fig:workspace}, the user can arbitrarily drag and drop entities from data sources (on the left) into windows that they create, resize, arrange and label. (Although the design could be generalised to supporting nested groups, our prototype only supported a single level of grouping.)
+
+Unlike file managers, the basic unit of data is not a file, but an \emph{instance} - corresponding to an RDF instance or any small bit of structured data. In order to make working with relational graphs manageable, an early decision we made was to break up RDF-like relational data) into discrete instances with properties; for JSON or XML data feeds, we represented all subtrees with more than 1 child as its an instance.  
+
+Each instance is displayed with its corresponding properties, and \emph{value selection}.
+
+Data sources were represented as collapsable panels in a sidebar on the left of the workspace, from which instances or entire data sources could be ``pulled off'' onto the workspace.  Figure \ref{fig:workspace} displays the entire UI overview.
 
 \begin{itemize}
-\item \emph{Group multi-path value selection} - Selecting any of the properties of an instance causes all of the rest of the instances in that box to be dereferenced along the same property, displaying the resulting value underneath the instance label.  Selecting a further property of the resulting value further dereferences this value.
+\item \emph{Group multi-path value selection} - Selecting any of the properties of an instance in a group (window) causes all of the rest of the instances that have that property in that group to be dereferenced along the same property, displaying the resulting value underneath the instance label.  Selecting a further property of the resulting value further dereferences this value.
 \item \emph{Drag-and-drop coreference / value combination} - In order to specify that two instances correspond to the same entity, they can be simly dragged together
 \item \emph{Group-based Drag-and-drop matching} - In order to specify that two instances correspond to the same entity, they can be simly dragged together
 \item \emph{Universal model-based brushing} -
