--- a/carpedata.bib
+++ b/carpedata.bib
@@ -258,3 +258,10 @@ time,...}},
   author={George, D. and Preston, UK}
 }
 
+@inproceedings{parallax,
+  title={Parallax and companion: Set-based browsing for the data web},
+  author={Huynh, D.F. and Karger, D.},
+  booktitle={WWW Conference. ACM},
+  year={2009},
+  organization={Citeseer}
+}
