--- a/chi2012.tex
+++ b/chi2012.tex
@@ -248,9 +248,9 @@ In order to feel familiar to new users and focus our design efforts on integrati
 Unlike file managers, the basic unit of data is not a file, but an \emph{instance} - corresponding to an RDF instance or any small bit of structured data. In order to make working with relational graphs manageable, an early decision we made was to break up RDF-like relational data) into discrete instances with properties; for JSON or XML data feeds, we represented all subtrees with more than 1 child as its an instance.  
 
 \subsubsection{Multipath selection: link-sliding for heterogeneous sets}
-When working with instances, users may be interested in a particular aspect of an instance rather than just the instance itself; for example, a user may be interested in the price of a particular product, its rating, manufacturer, and so on.  These are represented as \emph{properties} of the item, listed under the name of the instance.  Selecting any of such properties creates a \emph{path   selection} which dereferences all of the instances in that group that have that property, yielding their corresponding values.  For example, selecting the \emph{manufacturer} property for an instance in a group will cause the manufacturer of that item to appear alongside its label, and will also cause the manufacturers of \emph{all other   instances in that group that have a manufacturer property} to be dereferenced (and displayed) as well.  When such a path selection is applied, the properties displayed are updated to be the set of properties of the \emph{terminating value of the path}, so that such value can be further dereferenced.  For example, once selecting a manufacturer, a user may want to know the product's manufacturer's overall reputation, so might select its ``reputation score'' property, thereby extending the path selection.
+When working with instances, users may be interested in a particular aspect of an instance rather than just the instance itself; for example, a user may be interested in the price of a particular product, its rating, manufacturer, and so on.  These are represented as \emph{properties} of the item, listed under the name of the instance.  Selecting any of such properties creates a \emph{path   selection} which dereferences all of the instances in that group that have that property, yielding their corresponding values.  For example, selecting the \emph{manufacturer} property for an instance in a group will cause the manufacturer of that item to appear alongside its label, and will also cause the manufacturers of \emph{all other   instances in that group that have a manufacturer property} to be dereferenced (and displayed next to their instances) as well.  When such a path selection is applied, the properties displayed are updated to be the set of properties of the \emph{terminating value of the path}, so that such value can be further dereferenced.  For example, once selecting a manufacturer, a user may want to know the product's manufacturer's overall reputation, so might select its ``reputation score'' property, causing the previous path selection to be extended.
 
-Instances that cannot be dereferenced by a particular path selection  are left alone;  a second path selection can be created for such insances, which, like the first path selection, causes all like instances to be dereferenced.  Each group can carry an arbitrary number of path selections, and each path selection can be extended arbitrarily deep by selecting successive properties of values. This achieves the ability to \emph{link slide} in the same way introduced by Parallax \cite{parallax}.  
+Instances that cannot be dereferenced by a particular path selection  are left alone; an additional path selection can be created for such insances, which, like the first path selection, causes all appropriate instances to be dereferenced.  Each group can carry an arbitrary number of path selections, and each path selection can be extended arbitrarily deep by selecting successive properties of values. This achieves the ability to \emph{link slide} in the same way introduced by Parallax \cite{parallax}.  
  
 The effect that multiple selection group-dereferencing of values are twofold: the fact that clicking on a property dereferences all corresponding values makes it easy to quickly compare all instances that have the same structure.  Although we were concerned that users might be surprised that path selection applied to all objects within each group in parallel, users adapted very quickly and used this functionality to save them time.   
 
